RESOLVED FIXED270356
AX: AccessibilityText is not updated when static text descendant changes
https://bugs.webkit.org/show_bug.cgi?id=270356
Summary AX: AccessibilityText is not updated when static text descendant changes
Tyler Wilcock
Reported 2024-03-01 09:37:35 PST
...
Attachments
Patch (23.16 KB, patch)
2024-03-01 10:09 PST, Tyler Wilcock
no flags
Patch (23.03 KB, patch)
2024-03-01 10:51 PST, Tyler Wilcock
ews-feeder: commit-queue-
Patch (24.54 KB, patch)
2024-03-01 12:44 PST, Tyler Wilcock
no flags
Patch (25.34 KB, patch)
2024-03-01 16:46 PST, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2024-03-01 09:37:48 PST
Tyler Wilcock
Comment 2 2024-03-01 09:37:55 PST
Tyler Wilcock
Comment 3 2024-03-01 10:09:03 PST
Tyler Wilcock
Comment 4 2024-03-01 10:51:04 PST
Tyler Wilcock
Comment 5 2024-03-01 12:44:00 PST
Tyler Wilcock
Comment 6 2024-03-01 16:46:16 PST
EWS
Comment 7 2024-03-05 08:46:36 PST
Committed 275693@main (c0414c435ce6): <https://commits.webkit.org/275693@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470129 [details].
Note You need to log in before you can comment on or make changes to this bug.