Source/WebCore/accessibility/AXLogger.cpp
@@ -412,6 +412,12 @@ TextStream& operator<<(TextStream& stream, const AccessibilitySearchCriteria& cr
     return stream;
 }
 
+TextStream& operator<<(TextStream& stream, AccessibilityText text)
+{
+    stream << text.textSource << ": " << text.text;
+    return stream;
+}
+
 TextStream& operator<<(TextStream& stream, AccessibilityTextSource source)
 {
     switch (source) {
@@ -779,6 +785,9 @@ TextStream& operator<<(TextStream& stream, AXObjectCache::AXNotification notific
         break;
     case AXObjectCache::AXNotification::AXTextCompositionChanged:
         stream << "AXTextCompositionChanged";
+        break;
+    case AXObjectCache::AXNotification::AXTextUnderElementChanged:
+        stream << "AXTextUnderElementChanged";
         break;
 #if ENABLE(AX_THREAD_TEXT_APIS)
     case AXObjectCache::AXNotification::AXTextRunsChanged:
